#12 fixed not fitting iphones

--- a/TheResistanceOnline.Web/ClientApp/src/app/user/user-login/user-login.component.css
+++ b/TheResistanceOnline.Web/ClientApp/src/app/user/user-login/user-login.component.css
@@ -149,6 +149,15 @@
   }
 }
 
+@media only screen and (max-width: 414px) {
+  .login-box{
+    width: 250px;
+    height: 450px;
+    margin-left: 50px;
+
+  }
+}
+
 /*ToDo buy the non bold font and use here*/
 .validation {
   font-size: 10px;
