--- a/TheResistanceOnline.Web/ClientApp/src/app/user/user-reset-password/user-reset-password.component.css
+++ b/TheResistanceOnline.Web/ClientApp/src/app/user/user-reset-password/user-reset-password.component.css
@@ -11,7 +11,7 @@
   min-height: 100vh;
 }
 
-.forgot-password-box {
+.reset-password-box {
   width: 500px;
   height: 320px;
   background-color: #1e1e1e;
@@ -22,7 +22,8 @@
 
 }
 
-.forgot-password-io-box {
+
+.reset-password-io-box {
   display: flex;
   align-content: stretch;;
   justify-content: space-around;
@@ -71,7 +72,7 @@
   font-size: 13px;
 }
 
-.forgot-password-button {
+.reset-password-button {
   text-align: center;
   background-color: #04a5f9;
   padding: 15px;
@@ -82,14 +83,22 @@
   font-size: 14px;
 }
 
-.forgot-password-button:hover {
+.reset-password-button:hover {
   background: #0493e0;
 }
 
 
 @media only screen and (max-width: 760px) {
-  .forgot-password-box {
+  .reset-password-box {
     width: 390px;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .reset-password-box {
+    width: 250px;
+    margin-left: 50px;
+    height: 350px;
   }
 }
 
